--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@libreservice/lazy-cache",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "main": "dist/index.js",
   "type": "module",
   "files": [
@@ -23,14 +23,14 @@
   },
   "sideEffects": false,
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.59.7",
-    "@vitest/coverage-c8": "^0.31.1",
-    "eslint": "^8.41.0",
-    "eslint-config-standard": "^17.0.0",
-    "fake-indexeddb": "^4.0.1",
+    "@typescript-eslint/eslint-plugin": "^6.2.0",
+    "@vitest/coverage-v8": "^0.33.0",
+    "eslint": "^8.46.0",
+    "eslint-config-standard": "^17.1.0",
+    "fake-indexeddb": "^4.0.2",
     "idb": "^7.1.1",
-    "typescript": "^5.0.4",
-    "vitest": "^0.31.1"
+    "typescript": "^5.1.6",
+    "vitest": "^0.33.0"
   },
   "peerDependencies": {
     "idb": "^7.1.1"
